# ChangeLog for app-text/texlive-core
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.121 2010/03/08 14:28:23 ssuominen Exp $

  08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  texlive-core-2009-r1.ebuild:
  Fix building with libpng14.

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  texlive-core-2009.ebuild, texlive-core-2009-r1.ebuild:
  Fix poppler depend from obsolete virtual/ to app-text/.

*texlive-core-2009-r1 (01 Feb 2010)

  01 Feb 2010; Alexis Ballier <aballier@gentoo.org>
  +texlive-core-2009-r1.ebuild:
  Copy texmf files after make install so that we do not get out of date
  files, fixes texdoc warnings reported by Daniel Oehry <oda@gmx.li>, bug
  #302683

*texlive-core-2009 (11 Jan 2010)

  11 Jan 2010; Alexis Ballier <aballier@gentoo.org> +files/texmf-update2009,
  +texlive-core-2009.ebuild:
  Bump to 2009

  14 Oct 2009; Alexis Ballier <aballier@gentoo.org>
  -texlive-core-2008-r5.ebuild, -texlive-core-2008-r6.ebuild:
  remove old

  20 Sep 2009; nixnut <nixnut@gentoo.org> texlive-core-2008-r7.ebuild:
  ppc stable #264598

  30 Aug 2009; Brent Baude <ranger@gentoo.org> texlive-core-2008-r7.ebuild:
  Marking texlive-core-2008-r7 ppc64 for bug 264598

  29 Aug 2009; Jeroen Roovers <jer@gentoo.org> texlive-core-2008-r7.ebuild:
  Stable for HPPA (bug #264598).

  28 Aug 2009; Raúl Porcel <armin76@gentoo.org>
  texlive-core-2008-r7.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #264598

  27 Aug 2009; Steve Dibb <beandog@gentoo.org> texlive-core-2008-r7.ebuild:
  amd64 stable, bug 264598

  27 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  texlive-core-2008-r7.ebuild:
  stable x86, security bug 264598

*texlive-core-2008-r7 (27 Aug 2009)

  27 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  +texlive-core-2008-r7.ebuild:
  Add upstream fix for bibtex crash, bug #264598

  19 Aug 2009; Alexis Ballier <aballier@gentoo.org>