@@ -12,7 +12,7 @@ DIST texlive-core-2008-texmf.d-1.tar.lzma 9521 RMD160 df138c1f9cafa9f158bbf07c69
 DIST texlive-core-2008.tar.lzma 23175835 RMD160 629784b111c0d4bc9fac9f9131f63203d6e1dd38 SHA1 730986c628bd658b5062face9e400f61203d6b8d SHA256 60cf277a60311756ea51ed7e6c50b50d4069f4b4c007b11c114ca5c640e5a3c2
 DIST texlive-core-2009-texmf.d-1.tar.xz 10172 RMD160 175821a4f18a654a5ee8ebd59bc0a9b07373322e SHA1 4695cff22cf98bed13c9dd3b287c9b7800d3eba5 SHA256 ddf4a14e4e9405a5ea0e04577295957a70ffcb4e956c1a00c099e404db6bb6ee
 DIST texlive-core-2009.tar.xz 29672256 RMD160 eaca6de9844c587e7c93c27064ebe30dc2f60ad8 SHA1 3e11287f16595209181dc2e0ae7c23809e2e73ee SHA256 ae86afdc6a62cc025c98c054f2944de915c627876d3e39a25c7f6689d4f968b2
-DIST texlive-core-patches-15.tar.lzma 30872 RMD160 2e66f1a05432f447835e1dec95cddb830619c704 SHA1 48567742c5cc550d3282a11112948cb35b71bdf3 SHA256 7bc693d923a8f291bffea695df3d4945b692d1f8b71340048529b96acaafa9e1
+DIST texlive-core-patches-15.1.tar.bz2 31717 RMD160 81fb48c127ec0c184d6dcbd4a9aba5f94800ebd8 SHA1 9641cef0fd50eaff9c80189646ff0b4201ae705d SHA256 51a9eb66c03bf9668796a10db454dd233bc2d57997825509f0d61681a0003739
 DIST texlive-core-patches-16.tar.xz 6064 RMD160 0b83d6265e64d9fd52735bc7ae4e2e3e8798c2a9 SHA1 91d67b707e0a1c75055ab5aa3835636951b28f9e SHA256 54bb6c3fe35ec039e29efcf8ead0718b9486ff67eb4c4e353cc74c772c605b89
 DIST texlive-core-patches-17.tar.xz 6288 RMD160 388a8b56a5bab07f4bbc47154304bf401f88c41f SHA1 923ca0edf69c66351b3bece6a4944489ba17a04f SHA256 aaf18bbb78a32f0dda8ad18856674cdaa49d65ac697d822bc3ac39da5ca9da32
 DIST texlive-module-a2ping-2008.tar.lzma 31077 RMD160 d9a156c3e063831bc66fe3bf444903e7a5344d03 SHA1 2c7cbfb771fcb6f3b522fe7879de6904b34bb602 SHA256 e69a466b698a3c08fbb0cd7e8edf3d591d4d50d81b1a213e0d614aff78c77697
@@ -190,8 +190,8 @@ DIST texlive-module-tpic2pdftex-2009.tar.xz 428 RMD160 9e7fc3a36b0c8ab7c34ec39ee
 DIST texlive-module-tpic2pdftex.doc-2009.tar.xz 41940 RMD160 a4c11886322f7b7a6f4f907820d77a29d76ecc3f SHA1 09d6b5cf1d7989965483278632cf2b3526607dc5 SHA256 8d27efe6302aa7ea41b12e545f45baea33cccd1454c76b7a49268cc46a076680
 DIST texlive-module-web-2009.tar.xz 532 RMD160 1e64cafcb5d53b3e2df7d4ec23e91e6460c01910 SHA1 dfe4da403c090e4d8aa31fab7972936dc47d6dad SHA256 fd909cd2f62254ace1bcef41d6ccf9c0a9171d07d32ed07767743944ec424aa7
 DIST texlive-module-web.doc-2009.tar.xz 11068 RMD160 cd2d0e6d6caa068a63e87fbd3e9a699bf96ea7ed SHA1 c69760b0631771182d596c1bf8c3acb8ca1d48d1 SHA256 0edcbe24fc397bad809ab9837c50f7804a884effab3322fbfae543d5c331f79b
-EBUILD texlive-core-2008-r7.ebuild 12554 RMD160 d28850091548aa80552897e116a3ecb4afa96ebe SHA1 ba10e250b8b287ca6369506fd132f8c2006b5f29 SHA256 ad1a05d309e879709b9b31d812bbbfb1456c4ad0ac630cd74c0029881224c7bd
+EBUILD texlive-core-2008-r7.ebuild 12556 RMD160 cfc505b7460bcae469625c088be022f8428943f0 SHA1 f82b9eed903ee59a5cd38a03e2e65f5717d0617b SHA256 9948a72c9a3661ef2690354dafee274a5c55077089e29cea2713d37387ac5c35
 EBUILD texlive-core-2009-r1.ebuild 11702 RMD160 adaf1e4c415a40939cb45744eaff952288cbce0d SHA1 78236d7a914eafc2c51e4b918e27a5dd54c5a12c SHA256 d8190a9742232dd6c9c9e958a2f0322fc6561c1472ffa976cdd979382ba666d8
 EBUILD texlive-core-2009.ebuild 11679 RMD160 5af28fa43cfb972eab1572a33b7af30ccb98004d SHA1 159c15ed77c8d92ada1275206a21e3663e8d5144 SHA256 11dadee18255d3b58344066d33ef318dcc29b42ca0ff32d2f8caeaef05bef39e
-MISC ChangeLog 20175 RMD160 39b7e58aff8d4df5589f170965a0f555f95499b8 SHA1 a79285096903f09b1cc8a3ea8cd8f8b55de6fcdc SHA256 e0fe76267c02e862e3d2c521f08bf624d099c0b88764a6346e24bb5777f589ce
+MISC ChangeLog 20296 RMD160 bacf8ea50de446f3a46e3446c69e38fac130f72f SHA1 b7801e452103d8b091538a684c894cba51ff3e6c SHA256 f927ca3f3e1ade979b7f9edd4575f68adb383821edafe632ca60d2e738d4a88c
 MISC metadata.xml 327 RMD160 10186cf048d44753bf4cec722eed45d2ade12316 SHA1 0254321c012da0e8f80aec6f29a0fb5b17675d4d SHA256 e520223493249c261b48f7f7460ed7c262d35383484e730cfefba51fde1195be
