@@ -1,6 +1,10 @@
 # ChangeLog for app-text/texlive-core
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.121 2010/03/08 14:28:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.122 2010/05/14 14:47:25 ssuominen Exp $
+
+  14 May 2010; Samuli Suominen <ssuominen@gentoo.org>
+  texlive-core-2008-r7.ebuild:
+  Backport libpng14 patch to 2008.
 
   08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
   texlive-core-2009-r1.ebuild:
